setting_link_color

--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -104,9 +104,9 @@
             %i.far.fa-flag
             %span 不適切な商品の報告
         .box__container__good__right
-          = link_to root_path class:"box__container__good__right__safe" do
-            %i.fas.fa-lock
-            %span あんしん・あんぜんへの取り組み
+          = link_to root_path do
+            %i.fas.fa-lock{class:"box__container__good__right__safe"}
+            %span.box__container__good__right__safe__text あんしん・あんぜんへの取り組み
   .box__comment
     .box__comment__content
       .box__comment__content__main
