--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -163,6 +163,13 @@
       display: block;
       height: 30px;
       margin: 8px 0 0; 
+      color: #0099e8;
+      &__safe{
+        color: #0099e8;
+        &__text{
+          color: #0099e8;
+        }
+      }
     }
   }
 }
