--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -371,6 +371,13 @@
   background-color: #f5f5f5;
   position: relative;
   border-top: 1px solid #eee;
+  &__list{
+    color: black;
+    &:hover{
+      opacity: 50%;
+      border-bottom: black solid 1px;
+    }
+  }
   ul{
     width: 1020px;
     margin: 0 auto;
