--- a/app/views/products/_show_header.html.haml
+++ b/app/views/products/_show_header.html.haml
@@ -1,2 +1,2 @@
 .exhibitcontent_logo
-  = link_to image_tag('fmarket_logo_red.svg',size:"185x49",class:"exhibitcontent_logo__image"),'/products'
+  = link_to image_tag('fmarket_logo_red.svg',size:"185x49",class:"exhibitcontent_logo__image"),root_path
