--- a/app/assets/stylesheets/camera_icon.scss
+++ b/app/assets/stylesheets/camera_icon.scss
@@ -9,6 +9,7 @@
   background: #ea352d;
   color: #ffffff;
   text-align: center;
+  z-index: 100;
   &__text{
     margin: 32px 0 0;
     font-family: "Source Sans Pro", Helvetica, Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
