--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -19,7 +19,7 @@
         height: 390px;
         margin: 0 auto;
         width: 100%;
-        
+        cursor: pointer;
         &__image{
           display: block;
           height: 100%;
