--- a/app/views/products/_header.html.haml
+++ b/app/views/products/_header.html.haml
@@ -16,7 +16,7 @@
               .icon-text__left カテゴリーから探す
         %ul.mheader__main__bottom__left__category__submenu
           %li
-            = link_to "レディース", root_path, class:"mheader__main__bottom__left__category__submenu__child"
+            = link_to "レディース","/products/category_search/レディース", class:"mheader__main__bottom__left__category__submenu__child"
             %ul.mheader__main__bottom__left__category__submenu__child__ladies
               %li
                 = link_to "トップス", root_path, class:"mheader__main__bottom__left__category__submenu__child__ladies__child"
