--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -36,7 +36,6 @@
             .imain__main__link__image__right__a{id: "btn2"}
           .imain__main__link__image__bottom 
 
-
     .imain__main__content
       .imain__main__content__text 人気のカテゴリー
       .imain__main__content__menu
@@ -59,17 +58,7 @@
           %ul.imain__main__product__box__item__list
             -if @products_l
               - @products_l.each do |product|
-                %li.imain__main__product__box__item__list__data
-                  .imain__main__product__box__item__list__data__size
-                    =link_to product_path(product.id),class: "imain__main__product__box__item__list__data__size__link" do
-                      %figure.imain__main__product__box__item__list__data__size__link__figure
-                        %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
-                          =product.name
-                        .imain__main__product__box__item__list__data__size__link__figure__information
-                          %label.imain__main__product__box__item__list__data__size__link__figure__information__label
-                            ¥
-                            =product.price
-                          = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                =render "index", product: product
 
     .imain__main__product
       .imain__main__product__box
@@ -80,18 +69,7 @@
           %ul.imain__main__product__box__item__list
             -if @products_m
               - @products_m.each do |product|
-                %li.imain__main__product__box__item__list__data
-                  .imain__main__product__box__item__list__data__size
-                    =link_to product_path(product.id),class: "imain__main__product__box__item__list__data__size__link" do
-                      %figure.imain__main__product__box__item__list__data__size__link__figure
-                        %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
-                          =product.name
-                        .imain__main__product__box__item__list__data__size__link__figure__information
-                          %label.imain__main__product__box__item__list__data__size__link__figure__information__label
-                            ¥
-                            =product.price
-                          = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
-            
+                =render "index", product: product
 
     .imain__main__product
       .imain__main__product__box
@@ -102,19 +80,8 @@
           %ul.imain__main__product__box__item__list
             -if @products_d
               - @products_d.each do |product|
-                %li.imain__main__product__box__item__list__data
-                  .imain__main__product__box__item__list__data__size
-                    =link_to product_path(product.id),class: "imain__main__product__box__item__list__data__size__link" do
-                      %figure.imain__main__product__box__item__list__data__size__link__figure
-                        %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
-                          =product.name
-                        .imain__main__product__box__item__list__data__size__link__figure__information
-                          %label.imain__main__product__box__item__list__data__size__link__figure__information__label
-                            ¥
-                            =product.price
-                          = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                =render "index", product: product
  
-
     .imain__main__product
       .imain__main__product__box
         .imain__main__product__box__menu
@@ -124,17 +91,7 @@
           %ul.imain__main__product__box__item__list
             -if @products_h
               - @products_h.each do |product|
-                %li.imain__main__product__box__item__list__data
-                  .imain__main__product__box__item__list__data__size
-                    =link_to product_path(product.id),class: "imain__main__product__box__item__list__data__size__link" do
-                      %figure.imain__main__product__box__item__list__data__size__link__figure
-                        %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
-                          =product.name
-                        .imain__main__product__box__item__list__data__size__link__figure__information
-                          %label.imain__main__product__box__item__list__data__size__link__figure__information__label
-                            ¥
-                            =product.price
-                          = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                =render "index", product: product
     .imain__main__content
       .imain__main__content__text 人気のブランド
       .imain__main__content__menu
@@ -157,17 +114,7 @@
           %ul.imain__main__product__box__item__list
             -if @products_k
               - @products_k.each do |product|
-                %li.imain__main__product__box__item__list__data
-                  .imain__main__product__box__item__list__data__size
-                    =link_to product_path(product.id),class: "imain__main__product__box__item__list__data__size__link" do
-                      %figure.imain__main__product__box__item__list__data__size__link__figure
-                        %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
-                          =product.name
-                        .imain__main__product__box__item__list__data__size__link__figure__information
-                          %label.imain__main__product__box__item__list__data__size__link__figure__information__label
-                            ¥
-                            =product.price
-                          = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                =render "index", product: product
 
     .imain__main__product
       .imain__main__product__box
@@ -178,18 +125,7 @@
           %ul.imain__main__product__box__item__list
             -if @products_s
               - @products_s.each do |product|
-                %li.imain__main__product__box__item__list__data
-                  .imain__main__product__box__item__list__data__size
-                    =link_to product_path(product.id),class: "imain__main__product__box__item__list__data__size__link" do
-                      %figure.imain__main__product__box__item__list__data__size__link__figure
-                        %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
-                          =product.name
-                        .imain__main__product__box__item__list__data__size__link__figure__information
-                          %label.imain__main__product__box__item__list__data__size__link__figure__information__label
-                            ¥
-                            =product.price
-                          = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
-
+                =render "index", product: product
     .imain__main__product
       .imain__main__product__box
         .imain__main__product__box__menu
@@ -199,17 +135,7 @@
           %ul.imain__main__product__box__item__list
             -if @products_b
               - @products_b.each do |product|
-                %li.imain__main__product__box__item__list__data
-                  .imain__main__product__box__item__list__data__size
-                    =link_to product_path(product.id),class: "imain__main__product__box__item__list__data__size__link" do
-                      %figure.imain__main__product__box__item__list__data__size__link__figure
-                        %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
-                          =product.name
-                        .imain__main__product__box__item__list__data__size__link__figure__information
-                          %label.imain__main__product__box__item__list__data__size__link__figure__information__label
-                            ¥
-                            =product.price
-                          = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                =render "index", product: product
 
     .imain__main__product
       .imain__main__product__box
@@ -220,17 +146,7 @@
           %ul.imain__main__product__box__item__list
             -if @products_c
               - @products_c.each do |product|
-                %li.imain__main__product__box__item__list__data
-                  .imain__main__product__box__item__list__data__size
-                    =link_to product_path(product.id),class: "imain__main__product__box__item__list__data__size__link" do
-                      %figure.imain__main__product__box__item__list__data__size__link__figure
-                        %figcaption.imain__main__product__box__item__list__data__size__link__figure__figcaption
-                          =product.name
-                        .imain__main__product__box__item__list__data__size__link__figure__information
-                          %label.imain__main__product__box__item__list__data__size__link__figure__information__label
-                            ¥
-                            =product.price
-                          = image_tag product.product_images[0].image.to_s, class: "imain__main__product__box__item__list__data__size__link__figure__information__image"
+                =render "index", product: product
 .banner
   = render "banner"
 .footer
