--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -97,13 +97,13 @@
       .imain__main__content__menu
         %ul.imain__main__content__menu__list
           %li.imain__main__content__menu__list__category
-            .imain__main__content__menu__list__category__a
+            .imain__main__content__menu__list__category__a#scroll_btn5
               シャネル
-            .imain__main__content__menu__list__category__a
+            .imain__main__content__menu__list__category__a#scroll_btn6
               ルイヴィトン
-            .imain__main__content__menu__list__category__a
+            .imain__main__content__menu__list__category__a#scroll_btn7
               シュプリーム
-            .imain__main__content__menu__list__category__a
+            .imain__main__content__menu__list__category__a#scroll_btn8
               ナイキ
     .imain__main__product
       .imain__main__product__box
