--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -133,10 +133,8 @@
                 padding: 4px;
                 border-radius: 15px;
                 background-color: rgb(239, 239, 239);
-                color:black
-              }
-              &__b{
-                display: none;
+                color:black;
+                cursor: pointer;
               }
             }
           }
